20211206_src/ex2/file 、 src/lecture/file 作成